# tp-GuruxDLMS

./: CMakeLists.txt
development/src/: gxserializer.c  gxsetmalloc.c  server.c
